vlib/v/checker/tests/defer_use_returned_value_when_result_is_returned.out
vlib/v/checker/tests/defer_use_returned_value_when_result_is_returned.vv:3:11: error: `res` cannot be used in functions that returns a Result
    1 | fn test() !string {
    2 |     defer {
    3 |         println($res())
      |                 ~~~~~~
    4 |     }
    5 |     return 'test'
vlib/v/checker/tests/defer_use_returned_value_when_result_is_returned.vv:3:3: error: `println` can not print void expressions
    1 | fn test() !string {
    2 |     defer {
    3 |         println($res())
      |         ~~~~~~~~~~~~~~~
    4 |     }
    5 |     return 'test'
