vlib/v/checker/tests/defer_use_returned_value_when_result_is_returned.vv
fn test() !string {
	defer {
		println($res())
	}
	return 'test'
}
